--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/rustic-app"
-  command = "ng build"
+  command = "ng deploy --base-href=rustic-app"
 [[redirects]]
   from = "/*"
   to = "/index.html"
